fix docker automatic build

--- a/docker/Dockerfile.vk
+++ b/docker/Dockerfile.vk
@@ -2,7 +2,7 @@ FROM golang:1.19 as build-stage
 
 WORKDIR /app
 
-COPY . .
+COPY .. .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -mod vendor -o bin/vk
 
