--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -7,7 +7,8 @@
 				"ms-vscode.makefile-tools",
 				"golang.go",
 				"github.vscode-github-actions",
-				"yzhang.markdown-all-in-one"
+				"yzhang.markdown-all-in-one",
+				"pomdtr.excalidraw-editor"
 			]
 		}
 	}
