--- a/docker/Dockerfile.vk
+++ b/docker/Dockerfile.vk
@@ -1,3 +1,5 @@
+FROM bitnami/kubectl as kubectl
+
 FROM golang:1.19 as build-stage
 
 WORKDIR /app
@@ -13,6 +15,8 @@ FROM gcr.io/distroless/base-debian11 AS build-release-stage
 WORKDIR /
 
 COPY --from=build-stage /app/bin/vk /vk
+
+COPY --from=kubectl /opt/bitnami/kubectl/bin/kubectl /usr/local/bin/
 
 USER nonroot:nonroot
 
