temp files now in /tmp instead of .tmp.

--- a/kustomizations/InterLinkConfig.yaml
+++ b/kustomizations/InterLinkConfig.yaml
@@ -1,7 +1,7 @@
 VKTokenFile: "$HOME/interLink/token"
-InterlinkURL: "http://localhost"
-SidecarURL: "http://localhost"
-InterlinkPort: "30002"
+InterlinkURL: "https://intertwin.vega.izum.si"
+SidecarURL: "http://intertwin.vega.izum.si"
+InterlinkPort: "30443"
 SidecarService: "slurm" #docker, slurm
 SbatchPath: "/usr/bin/sbatch"
 ScancelPath: "/usr/bin/scancel"
