--- a/docker/Dockerfile.vk
+++ b/docker/Dockerfile.vk
@@ -10,7 +10,7 @@ RUN CGO_ENABLED=0 GOOS=linux go build -mod vendor -o bin/vk
 
 
 # Deploy the application binary into a lean image
-FROM gcr.io/distroless/base-debian11 AS build-release-stage
+FROM cgr.dev/chainguard/wolfi-base AS build-release-stage
 
 WORKDIR /
 
