--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     network_mode: "host"
     volumes:
     - type: bind
-      source: ./examples/config
+      source: ./kustomizations
       target: /etc/interlink
     # healthcheck:
     #   test: ["CMD", "/check.sh"]
@@ -18,9 +18,10 @@ services:
   docker-sidecar:
     image: docker.io/surax98/docker-sidecar:latest
     restart: always
+    network_mode: "host"
     volumes:
     - type: bind
-      source: ./examples/config
+      source: ./kustomizations
       target: /etc/interlink
     # healthcheck:
     #   test: ["CMD", "/check.sh"]
