--- a/kustomizations/InterLinkConfig.yaml
+++ b/kustomizations/InterLinkConfig.yaml
@@ -7,7 +7,7 @@ SbatchPath: "/usr/bin/sbatch"
 ScancelPath: "/usr/bin/scancel"
 CommandPrefix: ""
 ExportPodData: true
-DataRootFolder: ".knoc"
+DataRootFolder: ".knoc/"
 ServiceAccount: "knoc"
 Namespace: "vk"
 Tsocks: false
