--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,6 @@ services:
   interlink:
     image:  docker.io/surax98/interlink:latest
     restart: always
-    privileged: true
     network_mode: "host"
     volumes:
     - type: bind
@@ -18,6 +17,22 @@ services:
   docker-sidecar:
     image: docker.io/surax98/docker-sidecar:latest
     restart: always
+    privileged: true
+    network_mode: "host"
+    volumes:
+    - type: bind
+      source: ./kustomizations
+      target: /etc/interlink
+    # healthcheck:
+    #   test: ["CMD", "/check.sh"]
+    #   interval: 10s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 5s
+  vk:
+    image: docker.io/surax98/vk:latest
+    restart: always
+    privileged: true
     network_mode: "host"
     volumes:
     - type: bind
