--- a/docker/Dockerfile.vk
+++ b/docker/Dockerfile.vk
@@ -8,8 +8,9 @@ COPY .. .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -mod vendor -o bin/vk
 
+
 # Deploy the application binary into a lean image
-FROM ubuntu:latest AS build-release-stage
+FROM cgr.dev/chainguard/wolfi-base AS build-release-stage
 
 WORKDIR /
 
@@ -17,15 +18,6 @@ COPY --from=build-stage /app/bin/vk /vk
 
 COPY --from=kubectl /opt/bitnami/kubectl/bin/kubectl /usr/local/bin/
 
-COPY ../kustomizations/InterLinkConfig.yaml /kustomizations/
-COPY ../kustomizations/knoc-cfg.json /kustomizations/
-COPY ../token /kustomizations/
-COPY ../kubeconfig.yaml /kustomizations/
-ENV INTERLINKCONFIGPATH=/kustomizations/InterLinkConfig.yaml
-ENV VKTOKENFILE="/kustomizations/token"
-ENV TOKEN_PATH="/kustomizations/token"
-ENV KUBECONFIG=/kustomizations/kubeconfig.yaml
-ENV CONFIGPATH=/kustomizations/knoc-cfg.json
-ENV NODENAME=test-vk 
+USER nobody:nobody
 
 ENTRYPOINT ["/vk"]
