--- a/docker/Dockerfile.vk
+++ b/docker/Dockerfile.vk
@@ -8,16 +8,13 @@ COPY .. .
 
 RUN CGO_ENABLED=0 GOOS=linux go build -mod vendor -o bin/vk
 
-
 # Deploy the application binary into a lean image
-FROM cgr.dev/chainguard/wolfi-base AS build-release-stage
+FROM ubuntu:latest AS build-release-stage
 
 WORKDIR /
 
 COPY --from=build-stage /app/bin/vk /vk
 
 COPY --from=kubectl /opt/bitnami/kubectl/bin/kubectl /usr/local/bin/
-
-USER nobody:nobody
 
 ENTRYPOINT ["/vk"]
