--- a/kustomizations/InterLinkConfig.yaml
+++ b/kustomizations/InterLinkConfig.yaml
@@ -5,6 +5,7 @@ InterlinkPort: "3000"
 SidecarPort: "4000"
 SbatchPath: "/usr/bin/sbatch"
 ScancelPath: "/usr/bin/scancel"
+SqueuePath: "/usr/bin/squeue"
 CommandPrefix: ""
 ExportPodData: true
 DataRootFolder: ".knoc/"
@@ -13,3 +14,4 @@ Namespace: "knoc"
 Tsocks: false
 TsocksPath: "$WORK/tsocks-1.8beta5+ds1/libtsocks.so"
 TsocksLoginNode: "login01"
+BashPath: /bin/bash
