--- a/kustomizations/kustomization.yaml
+++ b/kustomizations/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 configMapGenerator:
   - name: test-vk-config 
     files:
-      - knoc-cfg.json=knoc-cfg.json
+      - vk-cfg.json=vk-cfg.json
   - name: vk-config 
     files:
       - InterLinkConfig.yaml=InterLinkConfig.yaml 
