--- a/kustomizations/service-account.yaml
+++ b/kustomizations/service-account.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: knoc
+  name: interlink
   namespace: vk
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: knoc-role
+  name: interlink-role
   namespace: vk
 rules:
 - apiGroups:
@@ -63,23 +63,23 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: knoc-rolebinding
+  name: interlink-rolebinding
 subjects:
 - kind: ServiceAccount
-  name: knoc
+  name: interlink
   namespace: vk
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: knoc-role
+  name: interlink-role
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: knoc-secret
+  name: interlink-secret
   namespace: vk
   annotations:
-    kubernetes.io/service-account.name: knoc
+    kubernetes.io/service-account.name: interlink
   labels:
-    kubernetes.io/service-account.name: knoc
+    kubernetes.io/service-account.name: interlink
 type: kubernetes.io/service-account-token
