--- a/kustomizations/InterLinkConfig.yaml
+++ b/kustomizations/InterLinkConfig.yaml
@@ -8,10 +8,11 @@ ScancelPath: "/usr/bin/scancel"
 SqueuePath: "/usr/bin/squeue"
 CommandPrefix: ""
 ExportPodData: true
-DataRootFolder: ".knoc/"
-ServiceAccount: "knoc"
-Namespace: "knoc"
+DataRootFolder: ".tmp/"
+ServiceAccount: "interlink"
+Namespace: "vk"
 Tsocks: false
 TsocksPath: "$WORK/tsocks-1.8beta5+ds1/libtsocks.so"
 TsocksLoginNode: "login01"
 BashPath: /bin/bash
+Pod_IP: "172.16.9.11"
