--- a/examples/interlink-slurm/vk/deployment.yaml
+++ b/examples/interlink-slurm/vk/deployment.yaml
@@ -24,6 +24,7 @@ spec:
         volumeMounts:
         - name: token
           mountPath: /opt/interlink
+      containers:
       - name: jaeger
         image: jaegertracing/all-in-one:1.51
       - name: inttw-vk
