--- a/examples/interlink-slurm/vk/deployment.yaml
+++ b/examples/interlink-slurm/vk/deployment.yaml
@@ -47,6 +47,8 @@ spec:
           value: "/opt/interlink/token"
         - name: CONFIGPATH
           value: "/etc/interlink/vk-cfg.json"
+        - name: KUBECONFIG
+          value: "/etc/interlink/kubeconfig.yaml"
         volumeMounts:
         - name: config
           mountPath: /etc/interlink/InterLinkConfig.yaml
@@ -56,6 +58,9 @@ spec:
           subPath: vk-cfg.json
         - name: token
           mountPath: /opt/interlink
+        - name: kubeconfig
+          mountPath: "/etc/interlink/kubeconfig.yaml"
+          subPath: kubeconfig.yaml
         resources:
           limits:
             cpu: 500m
