fix logs in interlink
Signed-off-by: Diego Ciangottini <diego.ciangottini@pg.infn.it>

--- a/examples/interlink-slurm/interlink/config/InterLinkConfig.yaml
+++ b/examples/interlink-slurm/interlink/config/InterLinkConfig.yaml
@@ -1,6 +1,6 @@
 VKTokenFile: "$HOME/interLink/token"
-InterlinkURL: "http://10.25.127.213"
-SidecarURL: "http://10.25.127.213"
+InterlinkURL: "http://XXX.XXX.XXX.XXX"
+SidecarURL: "http://XXX.XXX.XXX.XXX"
 InterlinkPort: "3000"
 SidecarPort: "4000"
 SbatchPath: "/usr/bin/sbatch"
