Improved performances on GetStatus call: O(n^2) -> O(1) (#137)

--- a/examples/interlink-slurm/vk/deployment.yaml
+++ b/examples/interlink-slurm/vk/deployment.yaml
@@ -58,6 +58,9 @@ spec:
           subPath: vk-cfg.json
         - name: token
           mountPath: /opt/interlink
+        - name: kubeconfig
+          mountPath: "/etc/interlink/kubeconfig.yaml"
+          subPath: kubeconfig.yaml
         resources:
           limits:
             cpu: 500m
