--- a/docs/package.json
+++ b/docs/package.json
@@ -22,7 +22,8 @@
     "prism-react-renderer": "^2.3.0",
     "raw-loader": "^4.0.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "redocusaurus": "^2.0.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.1",
